--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
-  flutter_webrtc: ^0.9.39
   flutter:
     sdk: flutter
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  flutter_webrtc: ^0.9.40
+  permission_handler: ^10.4.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,7 +49,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
